# workprotocol-actions-log-parser

./: .gitignore  README.md  pyproject.toml
gha_log_parser/: __init__.py  cli.py  github.py  parser.py
tests/: test_parser.py
